# SPK_UniversalTimestamp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: feature_rquest.yml  general_feedback.yml
.github/workflows/: tests.yml
Copilot/: CalendarRegistry.py  USAGE_GUIDE.md  debug_tests.py  demo.py  demo_utility_functions.py
Resources/: CC19_Sexagesimal_Names.json  CC19_Table_19_1a.json  Table_19_1_Build.py
SPK_UniversalTimestamp/: Astro_Space.py  CC00_Decimal_library.py  CC01_Calendar_Basics.py  CC02_Gregorian.py  CC03_Julian.py  CC08_Hebrew.py  CC14_Time_and_Astronomy.py  CC19_Chinese_1645.py  CC19_Sexagesimal_Names.json  Constants_Chinese.py  Constants_Gregorian.py  Constants_Hebrew.py  Constants_Julian.py  Constants_aCommon.py  Moment_aUniversal.py  Moment_bPresent_Calendars.py  Moment_bPresent_Geological.py  Moment_cPresent_Chinese.py  Moment_cPresent_Gregorian.py  Moment_cPresent_Hebrew.py  Moment_cPresent_Julian.py  UnivCHINESE.py  UnivCalendars.py  UnivDecimalLibrary.py  UnivGEOLOGICAL.py  UnivGREGORIAN.py  UnivHEBREW.py  UnivJULIAN.py  UnivSpace.py  UnivTimestamp.py  UnivTimestampFactory.py  __init__.py  geological-time-scale.json
Scripts/: example_usage.py
Tests/: PlotManager.py  PolynomialRegression.py  RandD_Appendix_C.json  RandD_Appendix_C.py  RandD_Appendix_C_Lunisolar_table.json  RandD_Appendix_C_Lunisolar_table.py  conftest.py  geological-time-scale.json  page_448.txt  page_451.txt  random_cases.json  random_cases.py  t003_imports.py  t004_parsing.py  test_001_UnivTimestamp.py  test_002_DecimalLibrary.py  test_010_DecimalLibrary.py  test_100_Geological.py  test_100_Moment_aUniversal.py  test_130_Moment_bGeological.py  test_160_Moment_bCalendars.py  test_200_Moment_cGregorian.py  test_200_UnivCalandars.py  test_201_Gregorian.py  test_201_Moment_cJulian.py  test_202_Julian.py  test_202_Moment_cJulian_Day.py  test_203_Hebrew.py  test_203_Moment_cHebrew.py  test_204_Moment_cUnix_Timestamp.py  test_300_Astronomical.py  test_301_Chinese.py  test_302_Persian.py  test_400_Moment_cPresent_Chinese.py  test_500_UnivFactory.py  test_501_Miscellaneous.py  test_501_Sorting.py  test_502_readme_examples.py  test_991_TimeZones.py  test_999_readme_examples.py
tools/: validate_toml.py
